--- a/Lemon/Resources/en.lproj/Localizable.strings
+++ b/Lemon/Resources/en.lproj/Localizable.strings
@@ -28,6 +28,7 @@
 "PreferenceViewController_setupViews_1553049563_16" = "CPU\n usage";
 "PreferenceViewController_setupViews_1553049563_17" = "GPU\n usage";
 "PreferenceViewController_setupViews_bootMonitorTitle _16" = "Show icons on menu bar on startup";
+"PreferenceViewController_toggleStatusBarVisibility" = "Show status bar icons";
 "About_windowAboutTitle_lemon" = "About Lemon Cleaner";
 "Appdelegate_about_windowAboutTitle_lemonlite" = "About Lemon Cleaner Lite";
 "AppDelegate_fetchResearchChannel_notification_1" = "Close";
