--- a/Lemon/Resources/en.lproj/Localizable.strings
+++ b/Lemon/Resources/en.lproj/Localizable.strings
@@ -6,117 +6,118 @@
   Copyright © 2019 Tencent. All rights reserved.
 */
 "LEMON_LANGUAGE" = "EN";
-"LMToolViewController_showNotSupportToast_alert_1" = "Yes";
-"LMToolViewController_showNotSupportToast_alert_2" = "Cancel";
-"LMToolViewController_showNotSupportToast_alert_3" = "Similar photos";
-"LMToolViewController_showNotSupportToast_alert_4" = "Tencent Lemon Cleaner does not support Mac OSX 10.10 or below.";
-"PreferenceViewController_setupViews_1553049563_1" = "Detect linked files when uninstalling an application";
-"PreferenceViewController_setupViews_1553049563_2" = "Please add menu bar icon to make it work. If enabled, you will be prompted to clean \nleftovers when dragging an application to the trash to uninstall.";
-"PreferenceViewController_setupViews_1553049563_3" = "When click close icon";
-"PreferenceViewController_setupViews_1553049563_4" = "Get back to Dock and keep Lemon running";
-"PreferenceViewController_setupViews_1553049563_5" = "Quit Lemon";
-"PreferenceViewController_setupViews_1553049563_6" = "On macOS 10.14 or above, the system shows recent 3 applications in dock \nby default.";
-"PreferenceViewController_setupViews_1553049563_7" = "Change settings";
-"PreferenceViewController_setupViews_tfWindowTitle _8" = "Preferences";
-"PreferenceViewController_setupViews_tfMonitorTitle _9" = "What to show on menu bar";
-"PreferenceViewController_setupViews_1553049563_10" = "Please choose one at least:";
-"PreferenceViewController_setupViews_1553049563_11" = "Memory\n usage";
-"PreferenceViewController_setupViews_1553049563_12" = "Disk\n usage";
-"PreferenceViewController_setupViews_1553049563_13" = "CPU\n temperature";
-"PreferenceViewController_setupViews_1553049563_14" = "Fan\n speed";
-"PreferenceViewController_setupViews_1553049563_15" = "Network\n speed";
-"PreferenceViewController_setupViews_1553049563_16" = "CPU\n usage";
-"PreferenceViewController_setupViews_1553049563_17" = "GPU\n usage";
-"PreferenceViewController_setupViews_bootMonitorTitle _16" = "Show on startup";
-"PreferenceViewController_setupViews_showMonitorWhenOpenLemon" = "Show on opening Lemon";
-"PreferenceViewController_setupViews_useMonitor" = "Enable Menu Bar";
-"About_windowAboutTitle_lemon" = "About Lemon Cleaner";
-"Appdelegate_about_windowAboutTitle_lemonlite" = "About Lemon Cleaner Lite";
-"AppDelegate_fetchResearchChannel_notification_1" = "Close";
-"AppDelegate_fetchResearchChannel_notification_2" = "Learn More";
-"RegisterViewController_registerButtonClick_warningLabel_1" = "Connection timed out. Pleae check your network and try again";
-"RegisterViewController_registerButtonClick_warningLabel_2" = "Connection timed out. Pleae check your network and try again";
-"RegisterViewController_registerButtonClick_warningLabel_3" = "Failed to connect to the host.Pleae check your network and try again";
-"RegisterViewController_registerButtonClick_warningLabel_4" = "DNS failed. Please remove DNS caches and change DNS server.";
-"RegisterViewController_setupViews_placeholderAttrStr _1" = "Please enter your activation code";
-"RegisterViewController__WarningRegisterCodeError_1" = "Unknown error. Please check your network and activation code.";
-"RegisterViewController__WarningRegisterCodeFormatInValidate _2" = "Incorrect license code. Please check out and try again";
-"RegisterViewController__WarningNetworkError _3" = "Network error. Please make sure you've connected to network and try again later";
-"RegisterViewController__WarningRegisterCodeMatchingError _4" = "The license code has been used to activate another Mac. Please try again.";
-"LMSplashMenuBarViewController_tabbar_clean" = "FreeUp";
-"LMSplashMenuBarViewController_tabbar_system" = " System";
-"LMSplashMenuBarViewController_menu_title" = "Monitor your system state from Menu bar";
-"LMSplashMenuBarViewController_menu_subtitle" = "Provide a quick look at network speed, RAM usage and easy access to free up";
-"LMSplashMainAppViewController_system_title" = "Full scan and clean your Mac by launching Lemon";
-"LMSplashMainAppViewController_system_subtitle" = "Analyze and clean your disk deeply. Uninstall unused apps completely";
-"PreferenceViewController_setupViews_languageTitle_1" = "Language";
-"PreferenceViewController_setupViews_languageRadioBtnChDesc_1" = "简体中文";
-"PreferenceViewController_setupViews_languageRadioBtnEnDesc_1" = "English";
-"LemonAsMonitorGuideViewController_setupViews_titleLabel_1" = "Do you want to show real time \nnetwork speed on your menu bar?";
-"LemonAsMonitorGuideViewController_setupViews_showString _2" = "Yes";
-"LemonAsMonitorGuideViewController_setupViews_cancelString _3" = "No";
-"LMSplashMainAppViewController_system_register_button" = "Let' go!";
-"LemonAsMonitorGuideViewController_setupViews_titleLabel_1" = "Do you want to enable the menu bar icon?";
-"LemonAsMonitorGuideViewController_setupViews_descLabel_1" = "It shows real-time network speed and works as a shortcut to launch Lemon.";
-"LemonAsMonitorGuideViewController_setupViews_onceTitle_1" = "Show it this time";
-"LemonAsMonitorGuideViewController_setupViews_alwayTitle_1" = "Show it upon startup of my Mac";
-"LemonAsMonitorGuideViewController_setupViews_showString _2" = "Confirm";
-"LemonAsMonitorGuideViewController_setupViews_cancelString _3" = "Cancel";
-"PreferenceASViewController_initView_titleLabel_1" = "Preferences";
-"PreferenceASViewController_initView_statusActionTitle_2" = "Show icons on menu bar on startup";
-"PreferenceASViewController_initView_statusActionDesc_3" = "Display real time network on menu bar at startup.";
-"PreferenceASViewController_startAlertWindow_alert_1" = "Are you sure to prevent the menu bar icon from opening on startup?";
-"PreferenceASViewController_startAlertWindow_alert_2" = "If yes, the icon along with the network speed will quit immediately.";
-"PreferenceASViewController_startAlertWindow_alert_3" = "Cancel";
-"PreferenceASViewController_startAlertWindow_alert_4" = "Yes";
-"PreferenceViewController_startAlertWindow_alert_1" = "Lemon will restart to make the language change come into effect.";
-"PreferenceViewController_startAlertWindow_alert_2" = "You don’t have to reboot the system. It restarts Lemon application.";
-"PreferenceViewController_startAlertWindow_alert_3" = "Cancel";
-"PreferenceViewController_startAlertWindow_alert_4" = "OK";
-"PreferenceASViewController_initView_openActionTitle_1" = "Show menu bar icon";
-"PreferenceASViewController_initView_openActionDesc_1" = "If enabled, you can monitor real time network speed \non menu bar.";
-"PreferenceViewController_setupViews_theme_radioBtn_lightDesc" = "Light mode";
-"PreferenceViewController_setupViews_theme_radioBtn_darkDesc" = "Dark mode";
-"PreferenceViewController_setupViews_tabBar_title_general" = "General";
-"PreferenceViewController_setupViews_tabBar_title_statusBar" = "Menu bar";
-"PreferenceViewController_setupViews_themeTitle" = "Appearance";
-"PreferenceViewController_setupViews_themeDesc" = "Support macOS 10.14 or above";
+"确定" = "Yes";
+"取消" = "Cancel";
+"相似照片清理" = "Similar photos";
+"暂不支持Mac OS 10.10及以下的版本哟！" = "Tencent Lemon Cleaner does not support Mac OSX 10.10 or below.";
+"自动检测卸载残留" = "Detect linked files when uninstalling an application";
+"需要保持状态栏开启才能正常使用。开启后，当拖动应用到废纸篓卸载时，将提示强力\n清理残留文件。" = "Please add menu bar icon to make it work. If enabled, you will be prompted to clean \nleftovers when dragging an application to the trash to uninstall.";
+"关闭主面板" = "When click close icon";
+"最小化到程序坞（Dock栏），不退出程序" = "Get back to Dock and keep Lemon running";
+"直接退出程序" = "Quit Lemon";
+"10.14系统后dock栏会默认保留近期使用的3款应用程序，" = "On macOS 10.14 or above, the system shows recent 3 applications in dock \nby default.";
+"更改设置" = "Change settings";
+"偏好设置" = "Preferences";
+"状态栏展示信息设置" = "What to show on menu bar";
+"请至少选择一项" = "Please choose one at least:";
+"内存占用" = "Memory\n usage";
+"磁盘占用" = "Disk\n usage";
+"CPU温度" = "CPU\n temperature";
+"风扇转速" = "Fan\n speed";
+"网速" = "Network\n speed";
+"CPU占用" = "CPU\n usage";
+"GPU占用" = "GPU\n usage";
+"开机时显示状态栏" = "Show on startup";
+"打开主界面时显示状态栏" = "Show on opening Lemon";
+"启用状态栏" = "Enable Menu Bar";
+"关于腾讯柠檬清理" = "About Lemon Cleaner";
+"关于Lemon Cleaner Lite" = "About Lemon Cleaner Lite";
+"关闭" = "Close";
+"打开" = "Learn More";
+"网络连接超时，请检测网络环境后重试。" = "Connection timed out. Pleae check your network and try again";
+"网络连接超时，请检测网络环境后重试。" = "Connection timed out. Pleae check your network and try again";
+"无法连接主机地址，请检查网络环境后重试。" = "Failed to connect to the host.Pleae check your network and try again";
+"DNS解析失败，请尝试清除DNS缓存并更改DNS服务器后重试。" = "DNS failed. Please remove DNS caches and change DNS server.";
+"           输入内测码，畅享极致清理" = "Please enter your activation code";
+"未知错误,请检查网络状态和内测码" = "Unknown error. Please check your network and activation code.";
+"内测码格式错误，请检查后重新输入" = "Incorrect license code. Please check out and try again";
+"网络错误,请连接网络后重试" = "Network error. Please make sure you've connected to network and try again later";
+"内测码注册的机器和当前机器不匹配,请检测内测码" = "The license code has been used to activate another Mac. Please try again.";
+"清理释放" = "FreeUp";
+"系统功能" = " System";
+"查看网速，快捷清理" = "Monitor your system state from Menu bar";
+"方便查看实时状态指标，轻轻一点，快速清理垃圾释放内存" = "Provide a quick look at network speed, RAM usage and easy access to free up";
+"多维扫描，深度清理" = "Full scan and clean your Mac by launching Lemon";
+"全方位深度分析系统，揪出占用磁盘元凶，彻底卸载软件" = "Analyze and clean your disk deeply. Uninstall unused apps completely";
+"语言设置" = "Language";
+"简体中文" = "简体中文";
+"English" = "English";
+"需要在状态栏显示图标吗？" = "Do you want to show real time \nnetwork speed on your menu bar?";
+"确定" = "Yes";
+"取消" = "No";
+"立即体验" = "Let' go!";
+"需要在状态栏显示图标吗？" = "Do you want to enable the menu bar icon?";
+"显示后可以在状态栏查看实时网速。" = "It shows real-time network speed and works as a shortcut to launch Lemon.";
+"仅本次" = "Show it this time";
+"开机默认显示" = "Show it upon startup of my Mac";
+"确定" = "Confirm";
+"取消" = "Cancel";
+"偏好设置" = "Preferences";
+"开机时启动状态栏" = "Show icons on menu bar on startup";
+"开机时状态栏将默认显示实时网速。" = "Display real time network on menu bar at startup.";
+"确定要关闭开机启动状态栏吗？" = "Are you sure to prevent the menu bar icon from opening on startup?";
+"关闭开机启动状态栏后，当前状态栏（包括网速显示）也将直接退出" = "If yes, the icon along with the network speed will quit immediately.";
+"取消" = "Cancel";
+"确定" = "Yes";
+"Lemon将会自动重启，重启后语言切换生效。" = "Lemon will restart to make the language change come into effect.";
+"无需重启系统，仅重启Lemon应用。" = "You don’t have to reboot the system. It restarts Lemon application.";
+"取消" = "Cancel";
+"好的" = "OK";
+"显示状态栏" = "Show menu bar icon";
+"启用后可在状态栏上实时查看当前网速。" = "If enabled, you can monitor real time network speed \non menu bar.";
+"浅色主题" = "Light mode";
+"深色主题" = "Dark mode";
+" 通用 " = "General";
+"状态栏" = "Menu bar";
+"主题设置" = "Appearance";
+"仅支持macOS 10.14系统及以上" = "Support macOS 10.14 or above";
 
-"LMToolViewController_initView_moreAppTitle_1" = "Join our community and to be heard";
-"LMMonitorTabController_rightAboutAction_LemonProductName_1" = "Lemon Cleaner";
-"LMMonitorTabController_rightAboutAction_LemonProductName_2" = "Lemon Cleaner Lite";
+"前往社区分享你的宝贵意见" = "Join our community and to be heard";
+"腾讯柠檬清理" = "Lemon Cleaner";
+"腾讯柠檬清理 Lite" = "Lemon Cleaner Lite";
 
+"拖拽文件夹完成添加" = "Drag and drop file folder here";
 "add_folder_drag_folder_tips" = "Drag and drop file folder here";
 
 
-"PreferenceViewController_monitor_checkFullDiskAccess_need_permission_tips" = "From macOS 10.15, you have to grant permission \"Full Disk Access\" to clean trash. Please click \"Grant permission\".";
+"macOS 10.15系统，需授权Lemon废纸篓访问权限才可开启。点击“前往授权”。" = "From macOS 10.15, you have to grant permission \"Full Disk Access\" to clean trash. Please click \"Grant permission\".";
 
-"PreferenceViewController_monitor_checkFullDiskAccess_need_permission_open_monitor_tips" = "From macOS 10.15, you have to add menu bar icon and grant permission \"Full Disk Access\" to clean trash. Do you want to open it？";
+"macOS 10.15系统，需要打开状态栏并且授权Lemon废纸篓访问权限才可开启。要开启并授权吗？" = "From macOS 10.15, you have to add menu bar icon and grant permission \"Full Disk Access\" to clean trash. Do you want to open it？";
 
-"PreferenceViewController_monitor_checkFullDiskAccess_need_open_monitor_tips" = "To keep the service running, you have to add menu bar icon to detect leftover files in the background. Do you want to add it?";
-
-
-"PreferenceViewController_monitor_checkFullDiskAccess_need_permission_open_monitor_ok_button_title" = "YES";
-
-"PreferenceViewController_setupViews_theme_radioBtn_follow_system" = "Follow system";
-
-"PreferenceViewController_monitor_full_disk_access_guide_window_title" = "Please rest assured that Lemon never or ever upload your files.";
-
-"PreferenceViewController_monitor_full_disk_access_guide_window_desc" = "Click the lock —— Click add icon —— Find \"Tencent Lemon\" in Application";
-
-"PreferenceViewController_monitor_checkFullDiskAccess_need_open_monitor_ok_button_title" = "YES";
+"需要打开状态栏才可开启。要打开吗？" = "To keep the service running, you have to add menu bar icon to detect leftover files in the background. Do you want to add it?";
 
 
+"开启并授权" = "YES";
 
-"LMToolViewController_checkFullDiskAccess_need_permission_window_title" = "From mac OS 10.15, you have to grant permission \"Full Disk Access\" to clean trash or  desktop folders.";
+"跟随系统" = "Follow system";
 
-"PreferenceViewController_trash_size_check_when_delete_file" = "when move files to the trash";
-"PreferenceViewController_trash_size_check_title" = "Notifications to empty the trash prompt";
-"PreferenceViewCOntroller_trash_size_check_when_over_size_first" = "when the trash size exceeds";
+"Lemon不会上传你的文件信息，请放心使用" = "Please rest assured that Lemon never or ever upload your files.";
+
+"步骤：【解锁】——【添加】——【应用程序】——【Lemon】" = "Click the lock —— Click add icon —— Find \"Tencent Lemon\" in Application";
+
+"打开状态栏" = "YES";
 
 
-"Share valuable suggestions" = "Share valuable suggestions";
 
-"Services Agreement" = "Services Agreement";
-"Privacy Policy" = "Privacy Policy";
-"Website" = "Website";
+"10.15系统上，Lemon无权限访问废纸篓、桌面等文件夹，需要开启“完全磁盘访问权限”才能扫描并清理垃圾。" = "From mac OS 10.15, you have to grant permission \"Full Disk Access\" to clean trash or  desktop folders.";
+
+"删除文件到废纸篓时提醒" = "when move files to the trash";
+"废纸篓清理提醒" = "Notifications to empty the trash prompt";
+"垃圾大小超过" = "when the trash size exceeds";
+
+
+"分享宝贵建议" = "Share valuable suggestions";
+
+"服务协议" = "Services Agreement";
+"隐私政策" = "Privacy Policy";
+"官网网站" = "Website";
