--- a/LemonClener/LemonClener/Resources/en.lproj/Localizable.strings
+++ b/LemonClener/LemonClener/Resources/en.lproj/Localizable.strings
@@ -5,118 +5,114 @@
  
  Copyright © 2019 Tencent. All rights reserved.
  */
-"LMCleanResultViewController_initViewText_theDayTitleLabel_1" = "Space recovered today";
-"LMCleanResultViewController_initViewText_mainTitle_2" = "Cleaned";
-"LMCleanResultViewController_initViewText_recent7DaysTitle_3" = "Total space recovered in last 7 days: ";
-"LMCleanResultViewController_initViewText_doneButton_4" = "Back";
-"LMCleanResultViewController_setResultViewWithCleanFileSize_fileNumText_1" = "Cleaned：%ld items";
-"LMCleanResultViewController_setResultViewWithCleanFileSize_timeText_2" = "Time consumption：%lds";
-"LMCleanResultViewController_setResultViewWithCleanFileSize_timeText_3" = "Time consumption：1s";
-"LMCleanBigViewController_setViewIsScanningOrCleanning_rubbishSelectTitle_1" = "selected";
-"LMCleanBigViewController_setResultTotalAndSelectSizeLabel_rubbishSizeLabel_1" = "%@ ";
-"LMCleanBigViewController_setResultTotalAndSelectSizeLabel_rubbishSizeLabel_2" = "%@ ";
-"LMCleanBigViewController_setNoResultViewWithScanFileNum_mainText_1" = " Great! Your Mac is clean.";
-"LMCleanBigViewController_setNoResultViewWithScanFileNum_fileNumText_2" = "Items scanned：%ld";
-"LMCleanBigViewController_setNoResultViewWithScanFileNum_timeText_3" = "Time consumption：%lds";
-"LMCleanBigViewController_setRubbishSelectLabelSize_sizeLabelStrring _1" = "%@ cleaning...";
-"LMCleanBigViewController_needDispalyCleaningPage_sizeLabelStrring _1" = "%@ cleaning...";
-"LMCleanBigViewController_scanProgressRefresh_totalLabelString _1" = " %@ ";
-"LMCleanBigViewController_scanProgressRefresh_1553048057_2" = "%@ ";
-"LMCleanBigViewController_updatePathRefresh_rubbishSelectTitle_1" = "Scanning%@";
-"LMCleanBigViewController_updatePathRefresh_rubbishSelectTitle_2" = "Cleaning%@";
-"LMCleanBigViewController_rememberCleanSetting_alert_titleLabelString_1" = "Remember cleanup items next time";
-"LMCleanBigViewController_rememberCleanSetting_alert_titleLabelString_2" = "Cancel cleanup items next time";
-"LMCleanBigViewController_rememberCleanSetting_alert_okButtonString_1" = "OK";
-"LMCleanBigViewController_rememberCleanSetting_alert_cancelButtonString_1" = "Cancel";
-"LMCleanBigViewController_downloadSelectAll_alert_titleString_1" = "Delete Download Files";
-"LMCleanBigViewController_downloadSelectAll_alert_descString_1" = "Downloaded files may contain important files, such as those downloaded through a browser, Please confirm and select them.";
-"LMCleanBigViewController_downloadSelectAll_alert_okButtonString_1" = "Confirm Selection";
-"LMCleanBigViewController_downloadSelectAll_alert_cancelButtonString_1" = "Cancel";
-"LMCleanScanViewController_initView_startScanBtn_1" = "Grant access";
-"LMCleanScanViewController_initView_mainViewDescLabel_2" = "Welcome to Lemon Cleaner Lite";
-"LMCleanScanViewController_initView_mainViewDescLabel_3" = "Welcome to Lemon Cleaner";
-"LMCleanScanViewController_initViewText_startScanBtn_1" = "Scan";
-"LMCleanScanViewController_initViewText_mainViewTitleLabel_2" = "Know your Mac better";
-"LMCleanScanViewController_initViewText_noResultTipLabel_3" = "Keep Mac fast and clean";
-"LMCleanScanViewController_initViewText_showBIgBtn_4" = "Details";
-"LMCleanScanViewController_initViewText_guideDescLabel1_5" = "Clik 'Details' to review about what";
-"LMCleanScanViewController_initViewText_guideDescLabel2_6" = "will be cleaned";
-"LMCleanScanViewController_initViewText_scanDetailBtn_7" = "Details";
-"LMCleanScanViewController_setResultCircleImageViewProgress_resultTipLabel_1" = "Scan complete";
-"LMCleanScanViewController_setResultCircleImageViewProgress_sizeString _2" = " %@ selected";
-"LMCleanScanViewController_setResultCircleImageViewProgress_resultBtn_3" = "Select";
-"LMCleanScanViewController_setResultCircleImageViewProgress_resultBtn_4" = "Clean";
-"LMCleanScanViewController_setCleanCategoryLabel_1553048057_1" = "Not selected";
-"LMCleanScanViewController_setCleanCategoryLabel_1553048057_2" = "Removed";
-"LMCleanScanViewController_startSmallClean_alert_1" = "Do you want to save the change and clean your Mac according to it next time?";
-"LMCleanScanViewController_startSmallClean_alert_2" = "If not, the change will not be saved";
-"LMCleanScanViewController_startSmallClean_alert_3" = "No";
-"LMCleanScanViewController_startSmallClean_alert_4" = "Yes";
-"LMCleanScanViewController_reArrangeContentView_scanTipLabel_1" = "Scanning";
-"LMCleanScanViewController_reArrangeContentView_systemRubbishSizeLabel_2" = "Waiting";
-"LMCleanScanViewController_reArrangeContentView_appRubishSizeLabel_3" = "Waiting";
-"LMCleanScanViewController_reArrangeContentView_internetRubbishSizeLabel_4" = "Waiting";
-"LMCleanScanViewController_reArrangeContentView_resultBtn_5" = "Back";
-"LMCleanScanViewController_reArrangeContentView_resultTitleLabel_6" = "Great! Your Mac is clean!";
-"LMCleanScanViewController_reArrangeContentView_scanTipLabel_7" = "Removing";
-"LMCleanScanViewController_reArrangeContentView_resultTipLabel_8" = "Cleaned";
-"LMCleanScanViewController_reArrangeContentView_resultBtn_9" = "Back";
-"LMCleanScanViewController_reArrangeContentView_numString _10" = " %ld items cleaned";
-"LMCleanScanViewController_showOpenPanelGetPermission_openDlg_1" = "Grant access";
-"LMCleanScanViewController_showOpenPanelGetPermission_openDlg_2" = "Lemon needs access to Home directory to clean. Please click 'Grant access'";
-"LMCleanScanViewController_showOpenPanelGetPermission_startScanBtn_3" = "Scan";
-"LMCleanScanViewController_selectCategory_resultTipLabel_1" = "Scan complete";
-"LMCleanScanViewController_selectCategory_resultTipLabel_2" = "Cleaned";
-"LMCleanScanViewController_selectCategory_resultTipLabel_3" = "System junks";
-"LMCleanScanViewController_selectCategory_resultTipLabel_4" = "Application junks";
-"LMCleanScanViewController_selectCategory_resultTipLabel_5" = "Internet junks";
-"LMCleanScanViewController_selectCategory_resultTipLabel_6" = "System junks cleaned";
-"LMCleanScanViewController_selectCategory_resultTipLabel_7" = "Application junks cleaned";
-"LMCleanScanViewController_selectCategory_resultTipLabel_8" = "Internet junks cleaned";
-"LMCleanScanViewController_showFloatViewInfo__floatViewScanning_1" = "Scanning...";
-"LMCleanScanViewController_showFloatViewInfo__floatViewScanning_2" = "Scanning...";
-"LMCleanScanViewController_showFloatViewInfo__floatViewSize_3" = "Not selected";
-"LMCleanScanViewController_showFloatViewInfo__floatViewSize_4" = "Cleaned";
-"LMCleanScanViewController_showFloatViewInfo__floatViewSize_5" = "Not selected";
-"LMCleanScanViewController_showFloatViewInfo__floatViewSize_6" = "Waiting";
-"LMCleanScanViewController_showFloatViewInfo__floatViewSize_7" = "Waiting";
-"QMItemCreateHelper_createSoftAdaptCategorySubItemWithId_1553048057_1" = "Clean %@ caches and logs";
-"QMItemCreateHelper_createActionItemWithId_actionItem_1" = "%@ Caches";
-"QMItemCreateHelper_createActionItemWithId_actionItem_2" = "%@ Logs";
+"当日清理" = "Space recovered today";
+"成功清理" = "Cleaned";
+"最近7天已清理" = "Total space recovered in last 7 days: ";
+"完成" = "Back";
+"清理文件：%ld个" = "Cleaned：%ld items";
+"清理耗时：%lds" = "Time consumption：%lds";
+"清理耗时：1s" = "Time consumption：1s";
+"已选择垃圾" = "selected";
+"已发现可清理文件 %@" = "%@ ";
+"共发现可清理文件 %@" = "%@ ";
+" 棒极了，没有发现垃圾哦～" = " Great! Your Mac is clean.";
+"扫描文件：%ld个" = "Items scanned：%ld";
+"扫描耗时：%lds" = "Time consumption：%lds";
+"%@ 清理中..." = "%@ cleaning...";
+"%@ 清理中..." = "%@ cleaning...";
+"已发现可清理文件 %@" = " %@ ";
+"共发现可清理文件 %@" = "%@ ";
+"正在扫描%@" = "Scanning%@";
+"正在清理%@" = "Cleaning%@";
+"是否删除下载文件" = "Delete Download Files";
+"下载文件可能包含重要文件。例如通过浏览器下载的文件，请确认后勾选" = "Downloaded files may contain important files, such as those downloaded through a browser, Please confirm and select them.";
+"确认勾选" = "Confirm Selection";
+"取消" = "Cancel";
+"获取权限" = "Grant access";
+"欢迎使用 Lemon Cleaner Lite" = "Welcome to Lemon Cleaner Lite";
+"欢迎使用 Lemon Cleaner" = "Welcome to Lemon Cleaner";
+"开始扫描" = "Scan";
+"畅快清理，清爽一下" = "Know your Mac better";
+"请继续保持良好的使用习惯哦～" = "Keep Mac fast and clean";
+"详情" = "Details";
+"点击“详情”按钮即可展开大界面，查" = "Click 'Details' to review about what";
+"看垃圾的具体分类和详细信息哦～" = "will be cleaned";
+"详情" = "Details";
+"已发现垃圾" = "Scan complete";
+"已选择 %@ 垃圾" = " %@ selected";
+"去勾选" = "Select";
+"立即清理" = "Clean";
+"未勾选" = "Not selected";
+"已清理" = "Removed";
+"下次要按这次的调整来清理吗？" = "Do you want to save the change and clean your Mac according to it next time?";
+"如果不需要，将不会记住这次更改，会恢复默认勾选项！" = "If not, the change will not be saved";
+"不用" = "No";
+"需要" = "Yes";
+"发现垃圾" = "Scanning";
+"等待中" = "Waiting";
+"等待中" = "Waiting";
+"等待中" = "Waiting";
+"完成" = "Back";
+"棒极了！Mac很干净！" = "Great! Your Mac is clean!";
+"正在清理" = "Removing";
+"已清理垃圾" = "Cleaned";
+"完成" = "Back";
+"清理了 %ld 个文件" = " %ld items cleaned";
+"允许访问" = "Grant access";
+"正常使用lemon需要允许访问个人文件夹，请点击“允许访问”以继续" = "Lemon needs access to Home directory to clean. Please click 'Grant access'";
+"开始扫描" = "Scan";
+"已发现垃圾" = "Scan complete";
+"已清理垃圾" = "Cleaned";
+"已发现系统垃圾" = "System junks";
+"已发现应用垃圾" = "Application junks";
+"已发现上网垃圾" = "Internet junks";
+"已清理系统垃圾" = "System junks cleaned";
+"已清理应用垃圾" = "Application junks cleaned";
+"已清理上网垃圾" = "Internet junks cleaned";
+"正在清理..." = "Scanning...";
+"正在扫描..." = "Scanning...";
+"未勾选" = "Not selected";
+"已清理" = "Cleaned";
+"未勾选" = "Not selected";
+"待清理" = "Waiting";
+"待扫描" = "Waiting";
+"清理%@缓存文件及日志文件" = "Clean %@ caches and logs";
+"%@缓存" = "%@ Caches";
+"%@日志" = "%@ Logs";
 
-"ActionItemCellView_getSizeStr_ sizeStr _1" = "No junks";
-"ActionItemCellView_setCellData_sizeStr_1" = "No junks";
-"ActionItemCellView_setCellData_sizeLabel_2" = " %@，safe to clean";
-"ActionItemCellView_setCellData_sizeLabel_3" = " %@，check out before cleanup";
-"SubCategoryCellView_setCellData_1553048057_1" = "Grant access";
-"SubCategoryCellView_setCellData_sizeLabel_2" = "Removing...";
-"SubCategoryCellView_setCellData_sizeLabel_3" = "Scanning...";
-"SubCategoryCellView_setCellData_sizeLabel_4" = "No junks";
-"SubCategoryCellView_setCellData_[item tips]_5" = "Select caches and logs by default. Unfold to find more.";
-"SubCategoryCellView_setCellData_sizeLabel_6" = " %@，safe to clean";
-"SubCategoryCellView_setCellData_sizeLabel_7" = " %@，check out before cleanup";
-"CategoryCellView_setCellData_sizeLabel_1" = "Scanning…";
-"CategoryCellView_setCellData_sizeLabel_2" = "Removing…";
-"CategoryCellView_setCellData_sizeLabel_3" = " %@, selected";
-"LMCleanBigViewController_setLabelFont_backBtn_1" = "Back";
-"LMCleanScanViewController_setLightLabelFont_systemRubbishLabel_1" = "System Junks";
-"LMCleanScanViewController_setLightLabelFont_appRubbishLabel_2" = "Application Junks";
-"LMCleanScanViewController_setLightLabelFont_internetRubbishLabel_3" = "Internet Junks";
-"LMCleanBigViewController_initData_removeButton_1" = "Clean";
-"LMCleanBigViewController_initData_doneButton_1" = "Back";
-"ToolCellView_awakeFromNib_experienceBtn_1" = "Learn more";
-"LMCleanBigViewController_initData_introText_1" = "Need more storage space? Try the below features!";
+"很干净" = "No junks";
+"很干净" = "No junks";
+"共 %@，建议清理" = " %@，safe to clean";
+"共 %@，谨慎清理" = " %@，check out before cleanup";
+"获取扫描权限" = "Grant access";
+"正在清理..." = "Removing...";
+"正在扫描..." = "Scanning...";
+"很干净" = "No junks";
+"默认清理缓存及日志，展开查看更多可清理项" = "Select caches and logs by default. Unfold to find more.";
+"共 %@，建议清理" = " %@，safe to clean";
+"共 %@，谨慎清理" = " %@，check out before cleanup";
+"正在扫描垃圾…" = "Scanning…";
+"正在清理垃圾…" = "Removing…";
+"共 %@，已选择" = " %@, selected";
+"返回" = "Back";
+"系统垃圾" = "System Junks";
+"应用垃圾" = "Application Junks";
+"上网垃圾" = "Internet Junks";
+"立即清理" = "Clean";
+"完成" = "Back";
+"立即体验" = "Learn more";
+"电脑空间不足？可以试试以下小工具哦~" = "Need more storage space? Try the below features!";
 
-"NO network" = "NO network";
+"当前无网络" = "NO network";
 
 
 // 5.1.0版本
-"Start" = "Start";
-"Hey, dear users" = "Hey, dear users";
-"We have launched \"File Moving\" to help you\nclean up the files you are not sure to clean." = "We have launched \"File Moving\" to help you\nclean up the files you are not sure to clean.";
+"去使用" = "Start";
+"Hey, 柠檬用户" = "Hey, dear users";
+"针对扫描出来很多文件不敢清理的情况\n我们推出了文件搬家功能" = "We have launched \"File Moving\" to help you\nclean up the files you are not sure to clean.";
 
-"Videos, pictures, documents and other content of IM tools, we help you organize and move them to external storage or cloud disks with just one click in order to free up your spaces." = "Videos, pictures, documents and other content of IM tools, we help you organize and move them to external storage or cloud disks with just one click in order to free up your spaces.";
+"例如聊天过程接收的视频、图片、文档等内容，一键整理转移到外设、云盘等，帮助你更好的释放磁盘空间。" = "Videos, pictures, documents and other content of IM tools, we help you organize and move them to external storage or cloud disks with just one click in order to free up your spaces.";
 
 
-"needFileMoveTitle" = "Not sure to clean these apps’ media and docs? Try";
-"File Moving" = "File Moving";
+"文件、视频和图片已占 %dGB 空间不敢清理 ? 快试试" = "Not sure to clean these apps’ media and docs? Try";
+"文件搬家" = "File Moving";
