--- a/Tools/LemonMonitor/LemonMonitor/Resources/en.lproj/Localizable.strings
+++ b/Tools/LemonMonitor/LemonMonitor/Resources/en.lproj/Localizable.strings
@@ -6,80 +6,85 @@
  Copyright © 2019 Tencent. All rights reserved.
  */
 "LEMON_LANGUAGE" = "EN";
-"LMMonitorTabController_setupLauncherView_launchLemonBtn_1" = "Launch Lemon";
-"About_windowAboutTitle_lemon" = "About Lemon Cleaner";
-//"LMMonitorTabController_rightAboutAction_windowAbout_1" = "About Lemon Cleaner";
-//"LMMonitorTabController_rightAboutAction_1553842683_2" = "Copyright©2020 Tencent. All Rights Reserved.";
-//"LMMonitorTabController_rightAboutAction_1553842683_3" = "Copyright©2020 Tencent. All Rights Reserved";
-"LMMonitorTabController_rightLanguageAction__windowLanguage_1" = "Language settings";
-"LMMonitorTabController_rightQuitAction_alert_1" = "After you quit, device access alert and leftover detection features will not work any more. Do you still want to quit?";
-"LMMonitorPoppverController_setupBubble_1553842683_1" = "System";
-"LMCleanViewController_showTrashContainerView_1553842683_1" = " can be recovered";
-"LMCleanViewController_showTrashContainerView_1553842683_2" = "Clean";
-"LMCleanViewController_showTrashCleaningView_trashTipsText_1" = "Cleaning...";
-"LMCleanViewController_showTrashCleanedView_trashCountText_1" = "space recovered";
-"LMCleanViewController_showTrashCleanedView_NSString_2" = "Recovered %@";
-"LMCleanViewController_showTrashCleanessView_trashTipsText1_1" = "Your Mac is very clean!";
-"LMCleanViewController_showTrashCleanessView_trashTipsText2_2" = "Keep Mac as clean as new";
-"LMCleanViewController_showScaningTrashView_trashTipsText1_1" = "Scanning...";
-"LMCleanViewController_showScaningTrashView_trashTipsText2_2" = " Wait a second please";
-"LMCleanViewController_showMemContainerView_memTipsText_1" = "Memory usage";
-"LMCleanViewController_showMemContainerView_memButtonText _2" = "Release";
-"LMCleanViewController_showMemCleaningView_memTipsText_1" = "Releasing memory...";
-"LMCleanViewController_showMemCleanedView_memTipsText1_1" = "Released";
-"LMCleanViewController_showMemCleanedView_memTipsText2_2" = "Memory";
-"LMSystemFeatureViewController_updateVedioState__privacyCameraLabel_1" = "Monitoring";
-"LMSystemFeatureViewController_updateVedioState__privacyCameraLabel_2" = "Off";
-"LMSystemFeatureViewController_updateVedioState__privacyCameraLabel_not_work" = "Not supported for 11.3";
 
-"LMSystemFeatureViewController_updateAudioState__privacyMicrophoneLabel_1" = "Monitoring";
-"LMSystemFeatureViewController_updateAudioState__privacyMicrophoneLabel_2" = "Off";
-"LMSystemFeatureViewController_updateAudioState__privacyMicrophoneLabel__not_work" = "Working on update";
+"打开 Lemon" = "Launch Lemon";
+"关于腾讯柠檬清理" = "About Lemon Cleaner";
+//"关于腾讯柠檬清理" = "About Lemon Cleaner";
+//"腾讯公司 版权所有" = "Copyright©2020 Tencent. All Rights Reserved.";
+//"Copyright©2020年 Tencent. All Rights Reserved" = "Copyright©2020 Tencent. All Rights Reserved";
+"语言设置" = "Language settings";
+"关闭状态栏后，所有功能（包括自动检测卸载残留，摄像头使用提醒等）都不再生效。确定关闭吗？" = "After you quit, device access alert and leftover detection features will not work any more. Do you still want to quit?";
+"系统功能" = "System";
+"垃圾可清理" = " can be recovered";
+"清理" = "Clean";
+"正在清理中..." = "Cleaning...";
+"垃圾已清理" = "space recovered";
+"本次清理 %@" = "Recovered %@";
+"你的电脑很干净" = "Your Mac is very clean!";
+"继续保持哦" = "Keep Mac as clean as new";
+"正在扫描中..." = "Scanning...";
+"请等待一会" = " Wait a second please";
+"内存占用" = "Memory usage";
+"释放" = "Release";
+"正在释放内存" = "Releasing memory...";
+"已释放" = "Released";
+"内存" = "Memory";
+"监控中" = "Monitoring";
+"未开启" = "Off";
+"暂不支持11.3系统" = "Not supported for 11.3";
 
-"LMSystemFeatureViewController_setupNetworkInfoView_networkCheckButton _1" = "Test speed";
-"LMSystemFeatureViewController_setupOwlViews_cameraLabel_1" = "Webcam Access Alert";
-"LMSystemFeatureViewController_setupOwlViews_microphoneLabel_2" = "Microphone Access Alert";
-"LMSystemFeatureViewController_setupMiscView_cpuText_1" = "CPU";
-"LMSystemFeatureViewController_setupMiscView_cpuUsage_label" = "CPU Usage";
-"LMSystemFeatureViewController_setupMiscView_fanText_2" = "Fan speed";
-"LMSystemFeatureViewController_setupMiscView_diskInfoLabel_3" = "Disk usage";
-"LMMemoryCellView_setupCloseInfoViews_closeButton _1" = "Close";
-"LMMemoryCellView_viewDidLoad_messageLabel_1" = "Tips: Save your files before closing it.";
+"监控中" = "Monitoring";
+"未开启" = "Off";
+"正在研究，请等更新" = "Working on update";
 
-"LMMonitorPoppverController_setupBubble_1553842944_1" = "FreeUp";
-"LMMonitorTabController_onLaunchSettings_item1 _1" = "About Lemon Cleaner";
-"LMMonitorTabController_onLaunchSettings_item4 _2" = "Update";
-"LMMonitorTabController_onLaunchSettings_item6 _3" = "Preferences";
-"LMMonitorTabController_onLaunchSettings_item7 _4" = "Quit";
-"LMMonitorTabController_rightQuitAction_alert_2" = "Cancel";
-"LMMonitorTabController_rightQuitAction_alert_3" = "Quit";
-"LemonHardwareViewController_initView_diskButton_1" = "More info";
-"LMSystemFeatureViewController_initNetworkData_diskSize_1"="Left";
-"LMSystemFeatureViewController_initNetworkData_diskSize_2"="Total";
-"LMMonitorTabController_rightAboutAction_LemonProductName_1" = "Lemon Cleaner";
+"网络测速" = "Test speed";
+"摄像头隐私保护" = "Camera Privacy Protection";
+"系统音频隐私保护" = "System Audio Access Protection";
+"CPU温度" = "CPU";
+"CPU占用" = "CPU Usage";
+"风扇转速" = "Fan speed";
+"磁盘占用" = "Disk usage";
+"关闭" = "Close";
+"关闭将直接退出程序，请先保存重要数据" = "Tips: Save your files before closing it.";
 
-"LMTrashSizeCheckWindowController_need_clean_size_tips_content_for_delete_file" = "There are %@ junks in the trash.";
-"LMTrashSizeCheckWindowController_need_clean_size_tips_content_second" = "Would you like to empty the trash?";
-"LMTrashSizeCheckWindowController_need_clean_size_tips_content_for_over_threshold" = "There are over %@ junks in the trash.";
-"LMTrashSizeCheckWindowController_cleaning_tips" = "Removing……";
-"LMTrashSizeCheckWindowController_cleaning_complete_tips" = "The trash has been cleaned up.";
+"清理释放" = "FreeUp";
+"关于 Lemon Cleaner" = "About Lemon Cleaner";
+"版本更新" = "Update";
+"偏好设置" = "Preferences";
+"退出状态栏" = "Quit";
+"取消" = "Cancel";
+"退出状态栏" = "Quit";
+"硬件详情" = "More info";
+"可用" ="Left";
+"共" ="Total";
+"腾讯柠檬清理" = "Lemon Cleaner";
 
-"LMTrashSizeCheckWindowController_cleaning_next_remind_btn" = "Clean later";
-"LMTrashSizeCheckWindowController_cleaning_clean_btn" = "Yes";
-"LMTrashSizeCheckWindowController_cleaning_cancel_btn" = "Cancel";
-"LMTrashSizeCheckWindowController_cleaning_complete_btn" = "Done";
+"废纸篓垃圾已占用 %@" = "There are %@ junks in the trash.";
+"是否清空废纸篓？" = "Would you like to empty the trash?";
+"废纸篓垃圾已超过 %@" = "There are over %@ junks in the trash.";
+"正在清理，请稍候..." = "Removing……";
+"已清空废纸篓" = "The trash has been cleaned up.";
 
-"New version detected, you will get better cleaning experience after update" = "New version detected, you will get better cleaning experience after update";
-"Current version: %@" = "Current version: %@";
-"Latest version: %@" = "Latest version: %@";
-"Upgrade" = "Upgrade";
+"暂不清理" = "Clean later";
+"清空" = "Yes";
+"取消" = "Cancel";
+"完成" = "Done";
 
-"beObscured"     = "The status bar may be obscured by the camera. Try displaying fewer icons or turning off the rest of the unused status bar icons.";
-"Cancel_Tip"     = "OK";
-"OK_Tip"         = "Preferences";
+"检测到当前有新版本，更新以获取更好的清理体验" = "New version detected, you will get better cleaning experience after update";
+"当前版本: %@" = "Current version: %@";
+"最新版本: %@" = "Latest version: %@";
+"立即升级" = "Upgrade";
 
-"NO network"     = "NO network";
+"状态栏可能被刘海屏遮挡，尝试显示更少的图标或关闭其余不使用的状态栏图标" = "The status bar may be obscured by the camera. Try displaying fewer icons or turning off the rest of the unused status bar icons.";
+"好的" = "OK";
+"偏好设置" = "Preferences";
 
-"Services Agreement" = "Services Agreement";
-"Privacy Policy" = "Privacy Policy";
-"Website" = "Website";
+"当前无网络" = "NO network";
+
+"去开启" = "Turn on";
+"一键开启" = "Enable";
+"开启保护，防止隐私设备异常使用" = "Against Unauthorized Access to Privacy Devices";
+
+"服务协议" = "Services Agreement";
+"隐私政策" = "Privacy Policy";
+"官网网站" = "Website";
